Fix benefits and values spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -175,7 +175,46 @@ input[type="text"], textarea {
 
 .liq-blue-bg {
   color: #fff;
-  background: -moz-linear-gradient(top, #173d56 0%, #13364d 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #173d56 0%,#13364d 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #173d56 0%,#13364d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: -moz-linear-gradient(left, #1f4f6d 0%, #103349 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #1f4f6d 0%,#103349 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #1f4f6d 0%,#103349 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+
+.liq-benefits {
+  h5 {
+    font-size: 21px;
+    color: #222425;
+  }
+  p {
+    padding: 0px 20px 80px 0px;
+    line-height: 1.6rem;
+    color: #a7a8a9;
+  }
+}
+
+.liq-values {
+  h5 {
+    font-size: 21px;
+    color: #222425;
+  }
+  ul {
+    padding-bottom: 50px;
+    padding-right: 40px;
+    margin-left: -20px;
+
+    li {
+      padding: 2px 0;
+      line-height: 1.6rem;
+      color: #5f6061;
+      font-size: 0.9rem;
+    }
+  }
+}
+
+.liq-components-links {
+  padding-top: 30px;
+
+  img {
+    padding-right: 30px;
+  }
 }
